[package]
name = "exo-kamino-litesvm"
version = { workspace = true }
edition = { workspace = true }
description = "Utilities and state structures for testing Kamino lending and farming protocols in LiteSVM"
homepage.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true }
fixed = { workspace = true }
litesvm = { workspace = true }
sha2-const-stable = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
exo-spl-token-litesvm = { workspace = true }
uint = { workspace = true }
