[package]
name = "exo-kamino-litesvm"
description = "Utilities and state structures for testing Kamino lending and farming protocols in LiteSVM"
version = "0.1.0-rc.1"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
fixed = { workspace = true }
litesvm = { workspace = true }
sha2-const-stable = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
exo-spl-token-litesvm = { workspace = true }
uint = { workspace = true }
