[package]
name = "exo-pinocchio-token-interface"
version.workspace = true
edition.workspace = true
description = "Wrappers for Token and Token-2022 account interaction in Pinocchio Solana programs"
homepage.workspace = true
repository.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
solana-account-view = { workspace = true }
