[package]
name = "exo-pinocchio-token-interface"
description = "Wrappers for Token and Token-2022 account interaction in Pinocchio Solana programs"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
solana-account-view = { workspace = true }
