[package]
name = "exo-spl-token-litesvm"
version = { workspace = true }
edition = { workspace = true }
description = "Utilities for creating and managing SPL token accounts in LiteSVM test environments"
homepage.workspace = true
repository.workspace = true

[dependencies]
litesvm = { workspace = true }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
